--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Here is some stuff about Eli Seth Neiburger
+title: Here is some stuff about eli.
 description: > # this means to ignore newlines until "baseurl:"
  This is a personal website for Eli Neiburger. The alternative was updating my linkedin, gross!
 permalink: ':title/'
@@ -7,17 +7,17 @@ url: "https://elitrichous.github.io" # the base hostname & protocol for your sit
 site-twitter: elitrichous
 
 # Author Settings
-author: Eli Seth Neiburger # add your name
+author: eli neiburger # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
+about-author: Seeking employment as the director of the Ann Arbor District Library. # add description
+social-twitter: @elitrichous # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-github: elitrichous # add your Github handle
 social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-email: eli@eliworks.com # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
