--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: elitrichous
 author: eli neiburger # add your name
 author-img: portrait-eli-neiburger99.png # add your photo
 about-author: Seeking employment as the director of the Ann Arbor District Library. # add description
-social-twitter: @elitrichous # add your Twitter handle
+social-twitter: elitrichous # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: elitrichous # add your Github handle
 social-linkedin: # add your Linkedin handle
