--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ site-twitter: elitrichous
 
 # Author Settings
 author: eli neiburger # add your name
-author-img: portrait-eli-neiburger99.png # add your photo
+author-img: elipixelportrait.png # add your photo
 about-author: Seeking employment as the director of the Ann Arbor District Library. # add description
 social-twitter: elitrichous # add your Twitter handle
 social-facebook: # add your Facebook handle
