--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ author: eli neiburger # add your name
 author-img: elipixelportrait.jpg # add your photo
 about-author: Seeking employment as the director of the Ann Arbor District Library. # add description
 social-twitter: elitrichous # add your Twitter handle
-social-facebook: # add your Facebook handle
+social-facebook: elitrichous # add your Facebook handle
 social-github: elitrichous # add your Github handle
-social-linkedin: # add your Linkedin handle
+social-linkedin: eli-neiburger-65ab13 # add your Linkedin handle
 social-email: eli@eliworks.com # add your Email address
 
 # Disqus
